#1001 Profile loaders and context integration